create form structure and basic styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,63 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  <div class="page-container">
+    <div class="left-sec">
+      <div class="logo-container">
+        <img src="./logos/odin-lined.png" alt="odin-logo">
+        <p class="logo">ODIN</p>
+      </div>
+      <div class="caption-container">
+        <p>Photo by <u>Halie West</u> on <u>Unsplash</u></p>
+      </div>
+    </div>
+    <div class="right-sec">
+      <div class="sub-sec">
+        <h2>This is not a real online service! You know you need something
+          like this in your life to help you realize your deepest dreams.
+          Sign up <em>now</em> to get started.</h2>
+        <h2>You <em>know</em> you want to.</h2>
+      </div>
+      <div class="sub-sec form-container">
+        <h2>Let's do this!</h2>
+        <form action="" method="post">
+          <div class="formGroup">
+            <div class="formPair">
+              <label for="firstN">FIRST NAME</label>
+              <input type="text" id="firstN" name="first_name">
+            </div>
+            <div class="formPair">
+              <label for="lastN">LAST NAME</label>
+              <input type="text" id="lastN" name="last_name">
+            </div>
+          </div>
+          <div class="formGroup">
+            <div class="formPair">
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="email">
+            </div>
+            <div class="formPair">
+              <label for="phoneNum">PHONE NUMBER</label>
+              <input type="tel" id="phoneNum" name="phone">
+            </div>
+          </div>
+          <div class="formGroup">
+            <div class="formPair">
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" name="password">
+            </div>
+            <div class="formPair">
+              <label for="passConfirm">CONFIRM PASSWORD</label>
+              <input type="password" id="passConfirm" name="passwordConf">
+            </div>
+          </div>  
+        </form>
+      </div>
+      <div class="sub-sec">
+        <button type="submit">Create Account</button>
+        <p>Already have an account? <a href="">Log in</a></p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
